@@ -2,6 +2,8 @@ Routes Changelog
 ========================
 
 -- 1.6.3 (**svn**)
+* Added additional test for normal '.' match and fixed new special matching to
+  match it properly. Thanks David Smith.
 * Fixed hanging special char issue with 'special' URL chars at the end of a URL
   that are missing the variable afterwards.
 * Changed Routes generation and recognition to handle other 'special' URL chars
